--- a/client/src/components/TabState.css
+++ b/client/src/components/TabState.css
@@ -5,48 +5,91 @@
     background-color: rgb(226, 224, 224);
     display: grid;
     grid-auto-flow: row;
-    justify-content: start;
-    align-content: stretch;
-    /* grid-auto-flow: row; */
 	grid-template-columns: repeat(6, minmax(147px,1fr));
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-gap: 18em 1em;
+    grid-gap: 18em 0.1em;
+    border: 3px solid red;
+    text-align: center;
+    position: relative;
     
 }
 
 .grid-tab1 {
     grid-area: 1 / 1 / 3 / 3;
-    margin-top: 20px;
+    margin: 20px 10px;
     background-color: white;
-    height: 17em;
     border: 2px solid black;
+    
 }
 
 .grid-tab2 {
     grid-area: 1 / 3 / 3 / 5;
-    margin-top: 20px;
+    margin: 20px 10px;
+    padding: 10px;
     background-color: white;
-    height: 17em;
     border: 2px solid black;
+    text-align: center;
 }
 
 .grid-tab3 {
     grid-area: 1 / 5 / 3 / 7;
-    margin-top: 20px;
+    margin: 20px 10px;
     background-color: white;
-    height: 17em;
     border: 2px solid black;
 }
 
 .grid-state-chart {
     grid-area: 2 / 1 / 5 / 7;
-    margin-top: 20px;
+    margin-top: 10px;
     background-color: white;
     height: 24em;
     border: 2px solid black;
 }
 
-@media screen and (max-width: 960px) {
+.tab-style {
+    position: absolute;
+    padding: 10px;
+    color: red;
+}
+.tab-button-style {
+    margin-top: 20px;
+    width: 300px;
+    height: 100px;
+}
+.fa-power-off{
+    color: green;
+}
+.tab-box{
+    display: flex;
+    position: absolute;
+    align-content: center;
+    justify-content: center;
+    width: 332px;
+    height: 240px;
+}
 
+@media screen and (max-width: 960px) {
+    .container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-gap: 0.1em 1em;
+    }
+    
+    .grid-tab1 {
+        grid-area: 1 / 1 / 2 / 3;
+    }
+    
+    .grid-tab2 {
+        grid-area: 2 / 1 / 3 / 3;
+    }
+    
+    .grid-tab3 {
+        grid-area: 3 / 1 / 4 / 3;
+    }
+    
+    .grid-state-chart {
+        grid-area: 4 / 1 / 6 / 3;
+    }
 
 }
