--- a/client/src/components/TabState.css
+++ b/client/src/components/TabState.css
@@ -11,6 +11,7 @@
     border: 3px solid red;
     text-align: center;
     position: relative;
+    justify-content: center;
     
 }
 
@@ -19,6 +20,7 @@
     margin: 20px 10px;
     background-color: white;
     border: 2px solid black;
+    position: relative;
     
 }
 
@@ -28,6 +30,7 @@
     background-color: white;
     border: 2px solid black;
     text-align: center;
+    position: relative;
 }
 
 .grid-tab3 {
@@ -35,6 +38,7 @@
     margin: 20px 10px;
     background-color: white;
     border: 2px solid black;
+    position: relative;
 }
 
 .grid-state-chart {
@@ -72,8 +76,13 @@
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
         grid-gap: 0.1em 1em;
+        
     }
     
+    .grid-size{
+        min-width: 250px;
+        height: 250px;
+    }
     .grid-tab1 {
         grid-area: 1 / 1 / 2 / 3;
     }
@@ -90,4 +99,91 @@
         grid-area: 4 / 1 / 6 / 3;
     }
 
+}
+
+.tab-switch{
+
+    width: 150px;
+    height:150px;
+    position: absolute;
+    left: 50%;
+    top: 60%;
+    transform: translate(-50%,-60%);
+
+
+}
+.tab-switch input {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    filter: alpha(opacity=0);
+    -moz-opacity: 0;
+    opacity: 0;
+    z-index: 100;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+.tab-switch label {
+    display: block;
+    width: 100%;
+    height: 100%;
+    color: #a5a39d;
+    font-size: 70px;
+    text-align: center;
+    line-height: 115px;
+    text-shadow: 0 2px 1px rgba(0,0,0,0.5);
+    border-radius: 50%;
+    background: #b25244; /* Fallback */
+    background: linear-gradient(#f7f2f6, #b2ac9e);
+    transition: all 0.3s ease-out;
+    z-index: -1;
+    box-shadow:
+        inset 0 2px 3px rgba(255,255,255,0.13),
+        0 5px 8px rgba(0,0,0,0.3),
+        0 10px 10px 4px rgba(0,0,0,0.3);
+}
+
+.tab-switch i{
+    margin-top: 35px;
+}
+
+.tab-switch label:before {
+    content: ""; 
+    position: absolute;
+    left: -10px;
+    right: -10px;
+    top: -10px;
+    bottom: -10px;
+    z-index: -1;
+    border-radius: inherit;
+    box-shadow: inset 0 10px 10px rgba(0,0,0,0.13); 
+    -webkit-filter:blur(1px); /* Smooth trick */
+    filter: blur(1px); /* Future-proof */
+}
+
+.tab-switch label:after {
+    content: ""; 
+    position: absolute;
+    left: -20px;
+    right: -20px;
+    top: -20px;
+    bottom: -20px;
+    z-index: -2;
+    border-radius: inherit;
+    box-shadow:
+        inset 0 1px 0 rgba(255,255,255,0.1),
+        0 1px 2px rgba(0,0,0,0.3),
+        0 0 10px rgba(0,0,0,0.15);
+}
+
+.tab-switch input:checked ~ label { /* Button */
+    color: #9abb82;
+    box-shadow:
+        inset 0 2px 3px rgba(255,255,255,0.13),
+        0 5px 8px rgba(0,0,0,0.35),
+        0 3px 10px 4px rgba(0,0,0,0.2);
 }
