--- a/client/src/components/TabState.css
+++ b/client/src/components/TabState.css
@@ -50,8 +50,8 @@
 }
 
 .tab-style {
-    position: absolute;
-    padding: 10px;
+    position: relative;
+    top:10px;
     color: red;
 }
 .tab-button-style {
@@ -60,9 +60,6 @@
     width: 280px;
     height: 100px;
     transform: translateX(-45%);
-}
-.fa-power-off{
-    color: green;
 }
 .tab-box{
     justify-content: center;
@@ -100,7 +97,7 @@
     }
 
 }
-
+/* 탭컨트롤 버튼 CSS  */
 .tab-switch{
 
     width: 150px;
@@ -131,7 +128,7 @@
     display: block;
     width: 100%;
     height: 100%;
-    color: #a5a39d;
+    color: red;
     font-size: 70px;
     text-align: center;
     line-height: 115px;
@@ -179,9 +176,9 @@
         0 1px 2px rgba(0,0,0,0.3),
         0 0 10px rgba(0,0,0,0.15);
 }
-
+/* 켜져있을 때 초록색 , 꺼져있을 때 빨간색 으로 설정  */
 .tab-switch input:checked ~ label { /* Button */
-    color: #9abb82;
+    color: green;
     box-shadow:
         inset 0 2px 3px rgba(255,255,255,0.13),
         0 5px 8px rgba(0,0,0,0.35),
